--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "typer",
     "requests",
     "tqdm",
+    "numpy",
+    "h5py",
 ]
 
 [project.optional-dependencies]
@@ -58,5 +60,5 @@ exclude = '''
 )/
 '''
 
-[tool.pylint]
+[tool.pylint.messages_control]
 max-line-length = 120
