--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ build-backend = "setuptools.build_meta"
 requires = [
     "setuptools >=65.0.0",
     "setuptools-scm",
+    "build",
 ]
 
 [project]
