Add delaunay preprocessing

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,11 @@
 [mypy-h5py.*]
 ignore_missing_imports = true
+
+[mypy-paraview.*]
+ignore_missing_imports = true
+
+[mypy-vtk.*]
+ignore_missing_imports = true
+
+[mypy-vtkmodules.*]
+ignore_missing_imports = true
