--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dev = [
 ]
 
 [project.scripts]
-tng-sv-cli = "tng_sv.cli:cli"
+tng-sv-cli = "tng_sv.__main__:__main__"
 
 [tool.black]
 line-length= 120
