--- a/mypy.ini
+++ b/mypy.ini
@@ -9,3 +9,6 @@ ignore_missing_imports = true
 
 [mypy-vtkmodules.*]
 ignore_missing_imports = true
+
+[mypy-matplotlib.*]
+ignore_missing_imports = true
