--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "h5py",
     "vtk",
     "matplotlib",
+    "open3d",
+    "fastapi",
+    "pydantic"
 ]
 
 [project.optional-dependencies]
@@ -65,6 +68,9 @@ exclude = '''
 
 [tool.pylint.messages_control]
 max-line-length = 120
+
+[tool.setuptools]
+packages = ["tng_sv"]
 
 [tool.isort]
 multi_line_output = 3
