Add snapdir webapp preprocessing

--- a/mypy.ini
+++ b/mypy.ini
@@ -12,3 +12,12 @@ ignore_missing_imports = true
 
 [mypy-matplotlib.*]
 ignore_missing_imports = true
+
+[mypy-illustris_python.*]
+ignore_missing_imports = true
+
+[mypy-scipy.*]
+ignore_missing_imports = true
+
+[mypy-open3d.*]
+ignore_missing_imports = true
